data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1398.wast
;; 9. **Test: Invalid Forward Branch with Polymorphic Stack**:    - **Description**: Implement a forward branch using `br_if` with a polymorphically modified stack containing insufficient matching operands for the block's signature.    - **Constraint Checked**: Ensures the operand stack meets the required forward branch signature of the target block.    - **Relation to Incorrect Branch Target Resolution**: Prevents mismatches in operand type and count from causing incorrect forward branch resolution, ensuring control flow integrity.

(assert_invalid
  (module
    (func $invalid-forward-branch-with-polymorphic-stack
      (block (result i32)
        (i32.const 10)
        (i32.const 5)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)